# web

./: CLAUDE.md  Cargo.toml  Dockerfile  fly.toml  index.html
.sqlx/: query-24900a2dc4d4715b34c296619c554fdc1b5b5b29acaf54f0730f610e62983e47.json  query-5e112e5d9b20e25f878cc779bade07f1763a7c2a2333aa9fd86a95b16457de72.json  query-7d6f91fbb883a590511f2248b01b33ff13b00c44e141f8ac0afe5d98a13bce20.json
css/: style.css
migrations/: 0001_initial.sql
public/: index.html  robots.txt  sitemap.xml
public/css/: style.css
public/forge/: index.html
public/js/: cursor.js  sparks.js  ui.js
public/sounds/: mixkit-dagger-woosh-1487.wav:Zone.Identifier
src/: contacts.rs  main.rs
